fixed issue: "Hacer un collapse del guided checklist para que se colapsen todos los steps"

--- a/src/modules/textEditor/textEditor.css
+++ b/src/modules/textEditor/textEditor.css
@@ -272,3 +272,7 @@
   .ql-guided-checklist img{
     margin: 0px !important;
   }
+
+  a {
+    cursor: pointer !important;
+  }
